[project]
name = "autonomous-tester"
version = "0.1.0"
description = "Autonomous UI testing agent using Playwright"
readme = "program.md"
requires-python = ">=3.10"
dependencies = [
    "playwright>=1.49.0",
    "pytest>=8.3.0",
    "pytest-playwright>=0.6.0",
    "pytest-json-report>=1.5.0",
    "pytest-timeout>=2.3.0",
]

[tool.pytest.ini_options]
# Default flags applied to every pytest invocation.
# The runner overrides these via CLI when needed.
addopts = "--tb=short"
testpaths = ["tests"]

[tool.uv]
# Use uv run <script> to execute runner.py and explorer.py.
